--- a/content/projects/minecraft/index.mdx
+++ b/content/projects/minecraft/index.mdx
@@ -29,15 +29,22 @@ Three computational projects built entirely in Minecraft's native programming la
 
 ## Introduction
 
-I learned to code in Minecraft. Not with mods or plugins, but with `mcfunction`—the game's built-in command language. It's about as bare-bones as you can get: basic arithmetic (+, -, *, /, %), no variables (just "scoreboard" registers), and no standard library. Want to build something? You're doing it from scratch.
+I learned to code in Minecraft. Not with mods or plugins, but with `mcfunction`—the game's built-in command language. It's a bare-bones language with basic arithmetic (+, -, *, /, %), no variables (just "scoreboard" registers), and simple functions for interacting with the game world.
 
-Turns out, those limitations were actually great for learning. Can't simulate physics without floating-point math? Figure it out. Want to run a neural network without exponentials? Get creative. Over the years, I built games that ended up on Minecraft Realms, and pushed the language to do things it probably wasn't meant to do. Here are three projects that show what happens when you refuse to let constraints stop you.
+Nevertheless, these limitations provide a great foundation to build more complex things, as long as you get creative (get it). For example, there are no trigonometric functions, so to take the sine between two entities, you start at one entity, face the direction of the other, summon a new entity one block away, and the x/z coordinates are the sine and cosine.
 
 ---
 
 ## Yeggs Tower Defense
 
-At over 11,000 lines of code, this fully-featured tower defense game has players defend against waves of hostile minecarts using strategically placed towers. Drawing inspiration from Kingdom Rush and Bloons Tower Defense, it features six base tower types, each with three upgrade levels leading to two specialization branches with three unique abilities—creating 18 distinct tower variants. Players earn currency by eliminating enemies and spend it to build or upgrade towers across multiple custom maps.
+<div className="flex items-center gap-3 mt-4 mb-6">
+  <Button asChild size="sm">
+    <Link href="https://drive.google.com/drive/folders/1ZluubrA9z1IiTfYSR82ENpKj1U1gZwYR" target="_blank" rel="noreferrer">Play the Game</Link>
+  </Button>
+</div>
+
+To this day, this is still one of my all time favorite projects. At over 11,000 lines of code, this fully-featured tower defense game has players defend against waves of hostile minecarts using strategically placed towers. I drew inspiration the two tower defense games I loved the most growing up: Kingdom Rush and Bloons Tower Defense. It features six base tower types, each with three upgrade levels leading to two specialization branches with three unique abilities—creating 18 distinct tower variants. Players earn currency by eliminating minecarts and spend it to build or upgrade towers across multiple custom maps.
+
 
 <div className="relative w-full aspect-video rounded-xl overflow-hidden shadow-lg border border-border bg-muted mb-6">
   <iframe
@@ -67,17 +74,19 @@ At over 11,000 lines of code, this fully-featured tower defense game has players
   }
 ]} />
 
-[Download the map](https://drive.google.com/drive/folders/1ZluubrA9z1IiTfYSR82ENpKj1U1gZwYR) to play it yourself, or watch the [YouTube trailer](https://www.youtube.com/watch?v=44So-6zd8QM).
-
 ---
 
 ## Newtonian Physics Simulation
 
-After building games, I wondered if Minecraft could simulate real physics. The challenge: mcfunction has no calculus, no floating-point math, no exponentials. The solution: numerical methods. By discretizing time and replacing derivatives with finite differences, complex differential equations become simple iterative updates.
+<div className="flex items-center gap-3 mt-4 mb-6">
+  <Button asChild variant="outline" size="sm">
+    <Link href="https://github.com/taj-gillin/numerical-approach-testing" target="_blank" rel="noreferrer">Source Code</Link>
+  </Button>
+</div>
+
+I wondered if Minecraft could simulate real physics. Of course, mcfunction has no calculus, no floating-point math, and no exponentials. However, even with calculus, some problems cannot be solved analytically. The solution is to use numerical methods. By discretizing time and replacing derivatives with finite differences, we can iteratively simulate differential equations.
 
 The [Newton-Raphson method](https://en.wikipedia.org/wiki/Newton%27s_method) captures this principle—iteratively improving approximations. For physics, we don't solve equations analytically; we step through time: Δx ≈ v · Δt.
-
-**GitHub:** [numerical-approach-testing](https://github.com/taj-gillin/numerical-approach-testing)
 
 ### Physics Implementation
 
@@ -95,19 +104,23 @@ For visualization, I use armor stands as particles. They store position data and
 
 ### Challenges
 
-**Numerical precision:** Minecraft scoreboards store only 32-bit integers. I scaled all values by 1000 (position 5.234 → 5234), giving three decimal places. Rounding errors accumulate, but careful timestep tuning maintains stability.
+**Numerical precision:** Minecraft scoreboards store only 32-bit integers. I scaled all values by 1000 (position 5.234 → 5234), giving three decimal places. Rounding errors accumulate, but careful timestep tuning helped with stability.
 
-**Collision singularities:** When gravitating objects collide, r → 0 and force explodes. Solution: gravity damping at small scales using F_g = -Gm₁m₂/(r² + ε²), preventing division by zero.
+**Collision singularities:** When gravitating objects collide, r → 0 and force explodes. To solve this I dampen gravity disabled gravitational interactions at small scales. A collision system instead would be a fun future addition. 
 
-The system simulates both projectile motion with air resistance and n-body gravitational dynamics, where multiple objects create emergent orbital phenomena despite using only integer arithmetic.
+The system simulates both projectile motion with air resistance and n-body gravitational dynamics, where multiple objects create emergent orbital phenomena!
 
 ---
 
 ## DeepMine - Neural Networks in Minecraft
 
-Implementing a complete neural network—trained in Python, running inference entirely in mcfunction—to classify handwritten MNIST digits. No Python bridge, no external servers, just pure integer arithmetic performing matrix multiplication and activation functions.
+<div className="flex items-center gap-3 mt-4 mb-6">
+  <Button asChild variant="outline" size="sm">
+    <Link href="https://github.com/taj-gillin/deepmine" target="_blank" rel="noreferrer">Source Code</Link>
+  </Button>
+</div>
 
-**GitHub:** [deepmine](https://github.com/taj-gillin/deepmine)
+After taking a deep learning class, I wanted to implement a neural network in Minecraft. While the network is trained in Python, it is exported to mcfunction and runs inference entirely in vanilla Minecraft!
 
 <ProjectImage 
   src="/projects/minecraft/deepmine_classifcation.png"
@@ -130,15 +143,4 @@ Implementing a complete neural network—trained in Python, running inference en
 
 3. **Softmax (approximated):** Since we only need argmax and exponential is monotonic, skip the exponential entirely and just find the maximum output value.
 
-Users draw digits on a 28×28 block grid, then run the predictor. The network reads the blocks, performs forward propagation through all layers, and displays the predicted digit—all instantaneously in a single game tick. Despite crude integer arithmetic and approximated softmax, the system classifies accurately. Neural networks are robust to quantization; the four decimal places suffice for digit recognition.
-
----
-
-## Conclusion
-
-Looking back, starting with mcfunction was oddly valuable. Modern languages let you call `math.sqrt()` without thinking about how it works. In Minecraft, you build everything from scratch—data structures from scoreboards, physics from discrete time steps, neural networks from integer arithmetic. When I eventually learned Python and C++, a lot of concepts clicked immediately because I'd already built them the hard way.
-
-These three projects—a tower defense game, physics simulations, and a neural network—all run on a language with no standard library, no floating-point math, and barely any features. But that's kind of the point. The tower defense game handles complexity like professional game development does. The physics simulations use the same numerical methods as real scientific computing. The neural network actually works.
-
-Would I recommend learning to code this way? Probably not—it's unnecessarily hard. But the constraints taught me to think about what computation actually is, rather than just which library to import. Sometimes learning through limitation teaches you more than having every tool at your disposal.
-
+Users draw digits on a 28×28 block grid, then run the predictor. The network reads the blocks, performs forward propagation through all layers, and displays the predicted digit. Despite crude integer arithmetic and approximated softmax, the system classifies accurately. 
