Updated trading game, add illuminate code

--- a/content/projects/illuminate/index.mdx
+++ b/content/projects/illuminate/index.mdx
@@ -6,6 +6,7 @@ date: "February 2025"
 event: "Hack@Brown 2025 - Winner: Best Use of Gen AI"
 coverImage: "/projects/illuminate/cover.png"
 team: ["Taj Gillin", "Danielle Whisnant", "Sami Nourji", "Andrew Kim"]
+repoUrl: "https://github.com/taj-gillin/Parallel-Ising"
 ---
 
 import { 
@@ -18,6 +19,7 @@ import {
 # Illuminate
 
 An AI-powered platform that transforms any topic into engaging, animated educational videos with voiceover explanations and interactive quizzes.
+
 
 ---
 
