Updated about me, typo

--- a/content/projects/minecraft/index.mdx
+++ b/content/projects/minecraft/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Programming in Minecraft"
-description: Games, physics simulations, and neural networks built entirely in Minecraft's native programming language"
+description: Games, physics simulations, and neural networks built entirely in Minecraft's native programming language, partnered with Microsoft
 technologies: ["mcfunction", "Minecraft", "Python", "TensorFlow", "Numerical Methods"]
 date: "2020-2024"
 purpose: "First Programming Experience"
