Updated ata cover

--- a/content/projects/ata/index.mdx
+++ b/content/projects/ata/index.mdx
@@ -4,7 +4,7 @@ description: "An LLM-powered teaching assistant that adapts to course material t
 technologies: ["OpenAI GPT-4", "Anthropic Claude", "Streamlit", "Python", "RAG", "DSPy"]
 date: "February 2024"
 event: "Hack@Brown 2024 - Winner: Best Use of AI in Education by Schmidt Futures"
-coverImage: "/projects/ata/bruno_banner.jpg"
+coverImage: "/projects/ata/ata_cover.png"
 team: ["Taj Gillin", "Julian Dai", "Woody Hulse"]
 ---
 
